--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -126,6 +126,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CreateTest2Form.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="CreateTestClass.h" />
+    <ClInclude Include="CreateTestForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="RegisterClass.h" />
     <ClInclude Include="RegisterForm.h">
       <FileType>CppForm</FileType>
@@ -142,6 +149,12 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="CreateTest2Form.resx">
+      <DependentUpon>CreateTest2Form.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateTestForm.resx">
+      <DependentUpon>CreateTestForm.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegisterForm.resx">
       <DependentUpon>RegisterForm.h</DependentUpon>
     </EmbeddedResource>
